# bambu-overlay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/static/: common.css  horizontal.css  overlay.js  vertical.css
assets/templates/: overlay.html
examples/systemd/: bambu-overlay.service
src/: assets.rs  auth.rs  bambu.rs  cli.rs  cloud.rs  config.rs  device_tls.rs  devices.rs  lib.rs  local.rs  main.rs  monitor.rs  mqtt.rs  overlay.rs  thumbnail.rs  video.rs  web.rs
src/bambu/: client.rs  de.rs  error.rs  models.rs
src/mqtt/: client.rs  runtime.rs
src/overlay/: format.rs  service.rs  summary.rs
tests/: fixtures.rs
tests/fixtures/: bind.json  current_print.json  mqtt_report.json  preference.json  tasks.json
