[package]
name = "bambu-overlay"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
bytes = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures-core = "0.3"
minijinja = "2.12"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4"
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-native-tls = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4"] }
x509-parser = "0.18"
